--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoDaVelha"
         tools:targetApi="31">
-        <activity android:name=".InserirPalavras" />
+        <activity
+            android:name=".InserirPalavras"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".TelaJogo"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
